Fixed search bar is not visible in mobile view

--- a/frontend/src/style/Navbar.css
+++ b/frontend/src/style/Navbar.css
@@ -236,8 +236,11 @@
 }
 @media (max-width: 580px) {
     .navbar-right {
-        display: none;
-    }
+        /* display: none; */
+        width: 100%;
+        justify-content: center;
+        
+      }
     .logo-img {
         width: 150px;
         margin-left: -20px;
